# pq-toolkit

./: README.md  Up-to-date_user_manual.md  user_manual.md
.github/workflows/: CICD.yml
docs/: python-docs-requirements.txt
docs/docs/reference/: dataclasses.md
src/deployments/: docker-compose.alembic.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml
src/pq-toolkit/: pyproject.toml
src/pq-toolkit-api/: Dockerfile  Makefile  prestart.sh  pyproject.toml
src/pq-toolkit-api/app/: crud.py  models.py  schemas.py
src/pq-toolkit-api/app/alembic/versions/: 5f6872919be3_init.py
src/pq-toolkit-api/app/api/routes/: experiments.py
src/pq-toolkit-api/app/core/: sample_manager.py
src/pq-toolkit-api/tests/: test_crud.py  test_sample_manager.py
src/pq-toolkit-ui/: tailwind.config.ts
src/pq-toolkit-ui/public/examples/demo-1/: setup.json  setup_ACR.json  setup_MUSHRA.json  setup_PEAQ.json
src/pq-toolkit-ui/src/app/[name]/: layout.tsx  utils.ts
src/pq-toolkit-ui/src/app/[name]/[step]/: page.tsx
src/pq-toolkit-ui/src/app/about/: page.tsx
src/pq-toolkit-ui/src/app/about/acr/: page.tsx
src/pq-toolkit-ui/src/lib/components/editors/: AbEditor.tsx  AbxEditor.tsx  AcrEditor.tsx  ApeEditor.tsx  MushraEditor.tsx  PeaqEditor.tsx
src/pq-toolkit-ui/src/lib/components/experiments/: ACRTestComponent.tsx  PEAQTestComponent.tsx
src/pq-toolkit-ui/src/lib/components/experiments/common/: PEAQSlider.tsx
src/pq-toolkit-ui/src/lib/components/form/: createExperimentForm.tsx  deleteAxisComp.tsx  deleteQuestionComp.tsx
src/pq-toolkit-ui/src/lib/components/player/: PEAQPlayer.tsx  Playback.tsx
src/pq-toolkit-ui/src/lib/schemas/: experimentSetup.ts  experimentState.ts  utils.ts
src/pq-toolkit/examples/: main.py
src/pq-toolkit/pqtoolkit/: dataclasses.py
src/pq-toolkit/tests/test_with_api/: test_experiments.py
