[project]
name = "app"
version = "0.1.0"
description = "API for the PQ toolkit project written in FastAPI"
readme = "README.md"
packages = [{ include = "app" }]
authors = [
    { name = "Jan Kowalczewski", email = "official.jan.kk@gmail.com" },
    { name = "Igor Matynia", email = "igor.matynia@gmail.com" },
    { name = "JakubWozniak", email = "JakubWozniak2211@hotmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    { name = "annotated-types", version = "0.6.0" },
    { name = "anyio", version = "4.2.0" },
    { name = "argon2-cffi", version = "23.1.0" },
    { name = "argon2-cffi-bindings", version = "21.2.0" },
    { name = "alembic", version = "1.13.1" },
    { name = "boto3", version = "1.21.26" },
    { name = "botocore", version = "1.24.46" },
    { name = "certifi", version = "2024.2.2" },
    { name = "cffi", version = "1.16.0" },
    { name = "charset-normalizer", version = "3.3.2" },
    { name = "click", version = "8.1.7" },
    { name = "fastapi", version = "0.103.0" },
    { name = "greenlet", version = "3.0.1" },
    { name = "h11", version = "0.14.0" },
    { name = "idna", version = "3.4" },
    { name = "iniconfig", version = "1.1.1" },
    { name = "jmespath", version = "1.0.1" },
    { name = "minio", version = "7.2.5" },
    { name = "packaging", version = "23.2" },
    { name = "pip", version = "23.3.1" },
    { name = "pluggy", version = "1.0.0" },
    { name = "pycparser", version = "2.22" },
    { name = "pycryptodome", version = "3.20.0" },
    { name = "pydantic", version = "2.5.3" },
    { name = "pydantic-core", version = "2.14.6" },
    { name = "pydantic-settings", version = "2.2.1" },
    { name = "python-dateutil", version = "2.9.0.post0" },
    { name = "python-dotenv", version = "1.0.1" },
    { name = "python-multipart", version = "0.0.6" },
    { name = "requests", version = "2.31.0" },
    { name = "s3transfer", version = "0.5.2" },
    { name = "six", version = "1.16.0" },
    { name = "sniffio", version = "1.3.0" },
    { name = "SQLAlchemy", version = "2.0.25" },
    { name = "starlette", version = "0.27.0" },
    { name = "tqdm", version = "4.66.2" },
    { name = "typing-extensions", version = "4.9.0" },
    { name = "urllib3", version = "1.26.18" },
    { name = "uvicorn", version = "0.20.0" },
    { name = "sqlmodel", version = "0.0.18" },
    { name = "psycopg", version = "3.1.19" },
    { name = "psycopg-binary", version = "3.1.19" },
    { name = "tenacity", version = "8.3.0" },
    { name = "pyjwt", version = "2.8.0" }
]
dynamic = ["dependencies"]

[tool.poetry.group.dev]
dependencies = [
    { name = "ruff", version = "0.4.6" },
    { name = "pytest", version = "7.4.0" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
