[project]
name = "your_project_name"  # Ensure this is properly set
version = "0.1.0"
description = "Description of your project"

authors = [
    { name = "Jan Kowalczewski", email = "official.jan.kk@gmail.com" },
    { name = "Igor Matynia", email = "igor.matynia@gmail.com" },
    { name = "JakubWozniak", email = "JakubWozniak2211@hotmail.com" }

]

[project]
name = "your_project_name"
version = "0.1.0"
description = "Description of your project"
authors = [
    "John Doe <johndoe@example.com>",
]

# Project dependencies (runtime dependencies)
[project.dependencies]
python = "^3.11"
requests = ">=2.13.0"
fastapi = ">=0.100.0,<=0.150.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
uvicorn = "^0.20.0"
pytest = ">=6.0.0"

# Development dependencies (packages needed only in development)
[project.dev-dependencies]
ruff = "0.4.6"
pytest = ">=7.0.0"
black = "22.0.0"
mypy = "1.0.0"
tox = "3.24.0"
flake8 = "5.0.4"
pre-commit = "3.0.0"

# Build system (you need this section for Poetry to work)
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
